add api sales
