# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\CategoryApiController;
 use App\Http\Controllers\Api\ProductApiController;
+use App\Http\Controllers\Api\TransactionApiController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -37,3 +38,7 @@ Route::get('product/{id}', [ProductApiController::class, 'show'])->middleware('a
 Route::post('product', [ProductApiController::class, 'store'])->middleware('auth:api');
 Route::post('product/{id}/update', [ProductApiController::class, 'update'])->middleware('auth:api');
 Route::delete('product/{id}', [ProductApiController::class, 'destroy'])->middleware('auth:api');
+
+Route::get('transaction', [TransactionApiController::class, 'index'])->middleware('auth:api');
+Route::post('transaction/import', [TransactionApiController::class, 'import'])->middleware('auth:api');
+Route::get('transaction/download', [TransactionApiController::class, 'export'])->middleware('auth:api');
