# storage/api-docs/api-docs.json
@@ -597,6 +597,76 @@
                     }
                 ]
             }
+        },
+        "/api/transaction": {
+            "get": {
+                "tags": [
+                    "Sales"
+                ],
+                "summary": "Get all transaction",
+                "description": "get all transaction",
+                "operationId": "all-transaction",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Anouthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
+        "/api/transaction/import": {
+            "post": {
+                "tags": [
+                    "Sales"
+                ],
+                "summary": "Import transaction",
+                "description": "import transaction",
+                "operationId": "import-transaction",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "import": {
+                                        "description": "Import excel",
+                                        "type": "file"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Anouthorized"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
         }
     },
     "components": {
